--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -19,5 +19,12 @@
   line-height: 42px;
   display: flex;
   align-items: center;
-  color: #444444;
+}
+
+.banner-container__text-summer {
+  color: var(--gray);
+}
+
+.banner-container__text-boreal {
+  color: var(--white);
 }
