--- a/src/components/HamburgerMenu/HamburgerMenu.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.css
@@ -14,16 +14,15 @@
 .line {
   width: 100%;
   height: 4px;
-  background-color: #FFF;
+  background-color: var(--white);
 }
 
 .open .line {
-  background-color: #FFF;
+  background-color: var(--white);
 }
 
 .menu-items {
   align-items: center;
-  background-color: var(--dark-blue);
   font-family: var(--text-font);
   font-size: 20px;
   font-weight: 700;
@@ -43,17 +42,25 @@
   z-index: 1;
 }
 
+.menu-items-summer {
+  background-color: var(--dark-blue);
+}
+
+.menu-items-boreal {
+  background-color: var(--boreal-purple);
+}
+
 .open .menu-items {
   opacity: 1;
   visibility: visible;
 }
 
 .open .menu-items .menu-items__link{
-  color: #FFF;
+  color: var(--white);
   text-decoration: none;
   text-transform: capitalize;
 }
 
 .menu-items__hr{
-  border: 1px solid #FFF;
+  border: 1px solid var(--white);
 }
